Fin extras: artefactos actualizados
